syntax = "proto3";

option csharp_namespace = "Shared.Protos";

package product;

service ProductGrpc {
  rpc GetProduct (GetProductRequest) returns (ProductResponse);
}

message GetProductRequest {
  int32 id = 1;
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
} 